[package]
name = "backer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
memmap2 = "*"
nom = "*"
byteorder = "*"
flate2 = "*"
checksum = "*"
lru = "*"
walkdir = "*"
clap = { version = "4.5.3", features = ["derive"] }
